--- a/examples/DeviceLibTest/res/layout/activity_am4.xml
+++ b/examples/DeviceLibTest/res/layout/activity_am4.xml
@@ -39,6 +39,12 @@
         android:layout_width="fill_parent"
         android:layout_height="50dp"
         android:text="SyncStage" />
+   
+   <Button
+        android:id="@+id/btn_Disconnect"
+        android:layout_width="fill_parent"
+        android:layout_height="50dp"
+        android:text="disconnect" />
         
 
     <TextView
